<resources>
    <string name="app_name">Rider</string>
    <string name="strSettings">MySettings</string>
    <string name="strOnLogin">OnLogin</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDdfmz1egjUFqky-rv-RvQ76-7XWSDN8mo</string>

    <string name="facebook_app_id">1577471472310987</string>
    <string name="fb_login_protocol_scheme">fb1577471472310987</string>
    <string name="eventsNear">Events near Guadalajara, Jal.</string>
    <string name="searchEvents">Search events</string>
    <string name="requestsMenu">Requests</string>
    <string name="VehiclesMenu">Vehicles</string>
    <string name="exploreMenu">Explore</string>
    <string name="past_ridesMenu">Past rides</string>
    <string name="next_ridesMenu">Next rides</string>
    <string name="appNameToolbar">RIDER</string>
    <string name="my_profile">My Profile</string>
    <string name="searchbar">SearchBar</string>
    <string name="activity">Activity</string>
    <string name="tokenApiGraph">TokenApiGraph</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="provisionalUserName">Steve</string>
    <string name="search_rides">Search rides</string>
    <string name="your_next_rides">Your next rides with Rider</string>
    <string name="rides_participated">Rides you have participated on</string>
    <string name="pending_ride_requests">Pending ride requests</string>
    <string name="user_car_list">Here\'s a list of your registered cars</string>
    <string name="title_activity_ijjbibib">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="appNameUpperCase">RIDER</string>
    <string name="logOut">Log out</string>

    <string name="com_prodevsmx_rider_trip_started">false</string>
    <string name="com_prodevsmx_rider_trip_name">none</string>

</resources>
